--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,8 +4,7 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;    
-    
-    
+      
 }
 
 .lista{    
@@ -96,13 +95,7 @@ body{
 .insertar{
     font-size: 18px;
 }
-button{
-    font-size: 15px;
-}
-.contacto{
-    font-size: 15px;
-    text-align: right;
-}
+
 
 .texto{
     text-align: center;
@@ -110,6 +103,9 @@ button{
 
 .principal{
     text-align: right;
+    display:flow-root;
+    justify-content: space-between;
+    height: auto;
 }
 
 .estudio{
@@ -165,13 +161,6 @@ footer{
     align-items: stretch;
 }
 
-.grid_contacto{
-    display: grid;
-    grid-template-rows: 100px;
-    justify-items: right;
-    justify-content: baseline;
-    align-items: center;
-}
 .hamburguesa{
     display: none;
 }
@@ -229,7 +218,7 @@ footer{
     transform: translate(500px, 30px);
 }
 .transform-translate15{
-    transform: translate(-150px, -150px);
+    transform: translate(600px, -150px);
 }
 .grid img{
     height: 300px;
@@ -289,7 +278,7 @@ footer{
         width: 500px;
     }
     .transform-translate15{
-        transform: translate(-50px, -5px);
+        transform: translate(50px, -5px);
         justify-content: space-between;
     }
 
