--- a/css/estilos.css
+++ b/css/estilos.css
@@ -74,7 +74,7 @@ body{
     justify-items: right;
 }
 
-.grid_footer{
+.footer_grid{
     display: grid;
     grid-template-rows: 150px;
     justify-content: center;
@@ -109,6 +109,7 @@ body{
     justify-content: space-between;
     height: auto;
     margin-left: 3cm;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    
 }
 
@@ -174,6 +175,28 @@ footer{
     color: #af0404;
 }
 
+.contacto_telefono{
+    text-align: auto;
+    align-items: center;
+    justify-content: space-between;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.contacto_direccion{
+    text-align: auto;
+    align-items: center;
+    justify-content: space-between;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.contacto_grid{
+    display: grid;
+    grid-template-rows: 100px;
+    justify-items: right;
+    justify-content: baseline;
+    align-items: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    
+}
+
 .transform-translate{
     transform: translate(325px,-382px);
 }
@@ -228,7 +251,7 @@ footer{
     transform: translate(500px, 30px);
 }
 .transform-translate15{
-    transform: translate(600px, -150px);
+    transform: translate( -250px, -150px);
 }
 .grid img{
     height: 300px;
@@ -290,7 +313,7 @@ footer{
         width: 500px;
     }
     .transform-translate15{
-        transform: translate(50px, -5px);
+        transform: translate(400px, -120px);
         justify-content: space-between;
     }
     .principal{
@@ -350,12 +373,12 @@ footer{
         height: 200px;
         width: 400px;
     }
-    .grid_contacto{
+    .contacto_grid{
         justify-content: space-between;
         text-align: center; 
     }
     .transform-translate15{
-        transform: translate(25px, 15px);
+        transform: translate(85px, 55px);
         justify-content: space-between;
     }
     .imagen{
@@ -427,12 +450,12 @@ footer{
         width: 280px;
         
     }
-    .grid_contacto{
+    .contacto_grid{
         justify-content: space-between;
         text-align: center;    
     }
     .transform-translate15{
-        transform: translate(20px, 10px);
+        transform: translate(10px, 70px);
         justify-content: space-between;
     }
     
