--- a/scss/parciales/_contacto.scss
+++ b/scss/parciales/_contacto.scss
@@ -19,6 +19,12 @@
     list-style-type:none;
     color: black;
 }
+nav ul li{
+    text-align: right;
+    list-style-type: none;
+
+}
+
 h1{
     text-align: center;
     margin-top: 0;
@@ -34,24 +40,36 @@ h2{
     line-height: 1.2
 }
 
-button{
-    font-size: 15px;
-}
 .contacto{
     font-size: 15px;
     text-align: right;
-}
-.grid_contacto{
-    display: grid;
-    grid-template-rows: 100px;
-    justify-items: right;
-    justify-content: baseline;
-    align-items: center;
+
+    &_grid{
+        display: grid;
+        grid-template-rows: 100px;
+        justify-items: right;
+        justify-content: baseline;
+        align-items: center;
+        font-family: $font-family;
+    }
+    &_telefono{
+        text-align: auto;
+        align-items: center;
+        justify-content: space-between;
+        font-family: $font-family;
+    }
+    &_direccion{
+        text-align: auto;
+        align-items: center;
+        justify-content: space-between;
+        font-family: $font-family;
+    }
 }
 
+
 body{
-    background-color: #f5f5f5;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: $color-principal;
+    font-family: $font-family;
     font-weight: normal;
     padding: 16px 32px;
     border: 2px solid black;
@@ -59,19 +77,20 @@ body{
     display: block;
     flex-direction: nowrap;
 }
-.grid_footer{
-    display: grid;
-    grid-template-rows: 150px;
-    justify-content: center;
-    align-items: end;
-}
-.footer{
-    text-align: center;
-} 
-nav ul li{
-    text-align: right;
-    list-style-type: none;
-}
+
+
 .transform-translate15{
     transform: translate(650px, -150px);
 }
+footer{
+    text-align: center;
+
+    &_grid{
+        display: grid;
+        grid-template-rows: 150px;
+        justify-content: center;
+        align-items: end;
+        font-family: $font-family
+    
+    }
+} 
