--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,3 +1,74 @@
+.sass-2 {
+   color: transparent;
+}
+  
+.btn-whatsapp {
+   background-color: green;
+}
+  
+.btn-mail {
+   background-color: orange;
+}  
+
+.boton, .boton--llamar, .boton--mail {
+   width: 100px;
+   height: 50px;
+   background-color: white;
+   text-align: center;
+   color: black;
+   border-radius: 20px;
+   border: 1px solid black;
+}
+ 
+.boton--llamar {
+  background-color: green;
+  color: black;
+}
+  
+.boton--mail {
+  background-color: red;
+  color: black;
+}
+
+.box-small {
+   height: 100px;
+   width: 100px;
+   background-color: navy;
+}
+ 
+.box-medium {
+   height: 200px;
+   width: 200px;
+}
+  
+.box-big {
+   height: 500px;
+   width: 500px;
+   background-color: orange;
+}
+
+.socios_ {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+  
+.estudio_ {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+}
+  
+.areas_ {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+  
+
 .header{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     display: flex;
